[package]
name = "sctpx"
version = "0.4.0"
authors = ["FanHui <hui.fan@mail.ru>"]
edition = "2021"
description = "A simple and friendly SCTP wrapper."
keywords = ["sctp", "socket", "net"]
categories = ["network-programming"]
license = "MIT"
homepage = "https://github.com/rust-util-collections/sctpx"
repository = "https://github.com/rust-util-collections/sctpx.git"

[dependencies]
nix = { version = "0.29", features = ["net"] }
libc = "0.2"
ruc = "7.0"

[features]
default = ["client", "server"]
client = []
server = []
